--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-<edu.brandeis.tjhickey.fireflies.GameView
-    		   android:id="@+id/game_view"
+<edu.brandeis.tjhickey.fireflies.GameController
+    		   android:id="@+id/game_controller"
     		   android:layout_width="fill_parent"
     		   android:layout_height="fill_parent"
                android:scaleType="centerInside"
